*) Changed: Information about real kills removed
*) Changed: hls_set options cleanup
*) Changed: hlstats.conf.ini DNSResolveIP and DNSTimeout removed.
			Replaced by UseGEOIP
*) Changed: Dropped hlstats_Server defaultMap.
			While loading servers from DB we get the current map via
			ServerQueries. This should avaid "unknown" maps
*) Changed: Dropped MailTo and MailPath setting for daemon.
*) Fixed: typo in lang (thx to LuBJe)
*) Fixed: bug in admin -> Tools -> Reset (thx to conan)
*) Fixed: remove the ; in rcon commands (thx to Par0noid)
*) Fixed: Issue #23
*) Fixed: Issue #26
*) Fixed: Issue #32
*) Fixed: Issue #31
*) Fixed: Issue #40
*) Fixed: Issue #42
*) Fixed: Issue #43
*) Fixed: Issue #51
*) Fixed: Issue #63
*) Fixed: Edit player details. Hiding a player was not saved
*) Fixed: Issue #62

1.51 (2009-11-23)
*) New: HLStats can now be translated via ini files. The default language
		is set in the hlstats.conf.php file. Update the configuration !
		Help and some graphics are still missing
*) New: Visitors can now change the language of the web content via cookies
*) New: Player are now seperated into "active" and "inactive" Players
		The players which have now activity (skill change) in a given timeframe
		are set to inactive and will not be show in players overview.
*) New: Role pictures in player info page if available.
*) Updated: Display of the awards and more stuff (thx to freaker and someone)
*) Updated: Ignore BOT option ignores everything which has BOT as unique ID
*) Updated: Dod Role and map pictures.
*) Updated: TF2 Weapon pics
*) Changed: Period for event deletion in hlstats.pl increased.
*) Changed: import-tools.sh removed (can be found in the docs now)
*) Changed: HLstats is now HLStats
*) Chnaged: Moved functions from hlstats.pl to HLstats.plib
*) Changed: hlstats.conf is now hlstats.conf.ini and uses the ini format.
	http://search.cpan.org/~adamk/Config-Tiny/
	The perl module Config::Tiny is now required for running HLStats daemon