@@ -56,6 +56,7 @@ HLStats ChangeLog
 			While loading servers from DB we get the current map via
 			ServerQueries. This should avaid "unknown" maps
 *) Changed: Dropped MailTo and MailPath setting for daemon.
+*) Chnaged: Filters at players overview are applied to chart, too.
 *) Fixed: typo in lang (thx to LuBJe)
 *) Fixed: bug in admin -> Tools -> Reset (thx to conan)
 *) Fixed: remove the ; in rcon commands (thx to Par0noid)
